<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:background="@color/colorDarkGreen">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/halkhyzmat_main_page_logo_white"
            android:contentDescription="@string/app_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:text="@string/app_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:drawablePadding="10dp"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:hint="@string/app_login_text"
            android:inputType="number"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="10dp"
            android:imeOptions="actionGo"
            android:hint="@string/app_password_text"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/loginBtn"
            android:onClick="login"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_style_orange"
            android:textColor="@color/colorWhite"
            android:text="@string/app_login_btn_txt"
            android:drawableEnd="@drawable/ic_send_white_24dp"/>

    </LinearLayout>

</LinearLayout>